# auto_reminder

./: .gitignore  api_finder.py  app.py  crontab  email.py  flake.nix  logging.json  models.py  pyproject.toml  sample_config.json  test_moodle.py
auto_reminder/: api_finder.py  emailer.py  logconfig.py  main.py  manual_finder.py  models.py
src/: api_finder.py  email.py  emailer.py  main.py  manual_finder.py  models.py
