[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_reminder"
description = "Automatically send reminder emails to students with missing quizzes"
version = "0.0.1"
requires-python = ">= 3.11"
dependencies = [
    "moodlepy",
    "aiosmtplib",
]
authors = [
    {name = "Ellis Gibbons", email = "gibbonec@rose-hulman.edu"}
]

[project.scripts]
auto_reminder = "auto_reminder.main:main"
